using null id for room category

--- a/src/main/webapp/resources/template/common/header.xhtml
+++ b/src/main/webapp/resources/template/common/header.xhtml
@@ -39,7 +39,7 @@
                         <p:menuitem value="Edit Details" url="#"/>
                     </p:menuButton>
                     <p:menuButton value="Administration">
-                        <p:menuitem value="Users" url="#"/>
+                        <p:menuitem value="Users" url="/user/manageusers.xhtml"/>
                         <p:menuitem value="Edit Details" url="#"/>
                     </p:menuButton>
                     <p:commandButton type="push" action="#{app.moveToReports}" value="Report" immediate="true"/>
